new color variants for id-kort

--- a/twig/IdKort/tilpass.html.twig
+++ b/twig/IdKort/tilpass.html.twig
@@ -74,6 +74,26 @@
                     </div>
                 </div>
             </button>
+            <button type="button" class="idkort-theme-card" data-theme="dark_brown_purple">
+                <div class="idkort-theme-thumb idkort-theme-thumb--dark-brown">
+                    <div class="idkort-theme-preview-card">
+                        <div class="idkort-theme-hole"></div>
+                        <img class="idkort-theme-logo" src="/wp-content/plugins/UKMrapporter/client/dist/assets/logos/ukmlogolilla.svg" alt="UKM logo" />
+                        <div class="idkort-theme-name">Navn</div>
+                        <div class="idkort-theme-role">Rolle</div>
+                    </div>
+                </div>
+            </button>
+            <button type="button" class="idkort-theme-card" data-theme="dark_brown_morkbrun">
+                <div class="idkort-theme-thumb idkort-theme-thumb--dark-brown">
+                    <div class="idkort-theme-preview-card">
+                        <div class="idkort-theme-hole"></div>
+                        <img class="idkort-theme-logo" src="/wp-content/plugins/UKMrapporter/client/dist/assets/logos/ukmlogobrun.svg" alt="UKM logo" />
+                        <div class="idkort-theme-name">Navn</div>
+                        <div class="idkort-theme-role">Rolle</div>
+                    </div>
+                </div>
+            </button>
         </div>
     </div>
 </div>
@@ -183,7 +203,7 @@
 
 .idkort-theme-thumb--dark-brown {
     background: #241211;
-    color: #ff520e;
+    color: #f5eee4;
 }
 
 .idkort-theme-logo {
